upload page HTML

--- a/08-HTML/homework/externo.css
+++ b/08-HTML/homework/externo.css
@@ -1,3 +1,10 @@
+
+body {
+    color: aquamarine;
+    background-image: url("D:\cursos_2020\pagina_web_propia\costillas.jpg");
+}
+
+
 h1 {
     color: chartreuse;
     background-color: rgb(192, 209, 174);
